사장님,배송기사 구현

--- a/boss/templates/boss/order_list.html
+++ b/boss/templates/boss/order_list.html
@@ -15,7 +15,11 @@
     </td>
     <td>
       {% if order.estimated_time == -1 %}
-        미정
+        <form method="post" action="{% url 'timeinput' %}">
+          <input type="number" name="estimated_time" />
+          <input type="hidden" name="order_id" value="{{order.id}}" />
+          <input type="submit" value="예상시간 입력" />
+        </form>
       {% else %}
         {{ order.estimated_time }}분
       {% endif %}
