--- a/delivery/templates/delivery/order_list.html
+++ b/delivery/templates/delivery/order_list.html
@@ -22,7 +22,10 @@
     </td>
     <td>
       {% if order.deliver_finish == 0 %}
-        배송중
+        <form method="post" action="{% url 'order_list' %}">
+          <input type="hidden" name="order_id" value="{{order.id}}" />
+          <input type="submit" value="배송완료" />
+        </form>
       {% else %}
         완료
       {% endif %}
